--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "formik": "^2.4.5",
     "next": "14.1.0",
     "react": "^18",
     "react-bootstrap": "^2.10.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "eslint": "^8",
