--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18",
+    "socket.io-client": "^4.7.4",
     "yup": "^1.3.3"
   },
   "devDependencies": {
